fix spacing ui bug in status bar text

--- a/src/styles/controls.css
+++ b/src/styles/controls.css
@@ -1805,4 +1805,5 @@
 .rss-dashboard-import-statusbar-icon {
   width: 12px;
   --icon-size: 10px;
+  margin-right: 6px;
 }
